--- a/font/style.css
+++ b/font/style.css
@@ -20,7 +20,13 @@ html,body {
 
 /* begin header top */
 .containers {
-    display: flex;
+    display: inline-flex;
+    border: 0.1px solid #c7c4c4e6;
+    font-size: 15px;
+    height: 30px;
+    text-align: center;
+    width: 100%;
+
 }
 
 .ht-between {
@@ -29,30 +35,27 @@ html,body {
 }
 
 .ht-left,.ht-between,.nation,.individual {
-    border: 0.1px solid #c7c4c4e6;
-    padding-right: 5px;
-    font-size: 15px;
-    height: 30px;
+    border-right: 0.1px solid #c7c4c4e6;
+    font-size: 12px;
     text-align: center;
-    padding-top: 10px;
-    width: 33.33333%;
+    padding: 7px 10px;
 }
 
 .ht-left {
-    width: 300px;
+    width: 20%;
 }
 
 .ht-between {
-    width: 600px;
+    width: 60%;
 
 }
 .nation {
-    width: 150px;
+    width: 10%;
 
 }
 .individual {
     justify-content: space-between;
-    width: 100px;
+    width: 10%;
 }
 
 /* End header top */
@@ -177,11 +180,6 @@ button {
 
 /* begin begin product list */
 
-#content .product-img {
-    margin-left: 35px;
-    margin-right: auto;
-}
-
 #content .product-list {
     margin-top: 60px;
 }
@@ -189,14 +187,13 @@ button {
 #content .product-item {
     float: left;
     width: 33.33333%;
-}
-#content .product-name {
     text-align: center;
+ 
 }
 
 .product-item .Add-product {
-    margin-left: 110px;
     padding: 10px;
+    text-align: center;
 }
 .product-item .Add-product:hover {
     background-color: rgb(233, 61, 61);
@@ -206,17 +203,16 @@ button {
 
 /* begin begin footer */
 #footer .trademark-logo {
-    background-color: #3f3e3e;
+    background-color: #2e2e2e;
     display: inline-block;
     width: 100%;
-    margin-top: 20px;
+    margin-top: 30px;
+    height: 60px;
 }
 
 #footer .logo {
-    padding: 10px 20px;
+    padding: 4px 20px;
 }
-
-
 
 #footer .footer-information {
     background-color: #000;
@@ -224,6 +220,7 @@ button {
     height: 200px;
     padding: 40px 0 40px 0;
     width: 100%;
+    margin-top: 0;
 }
 
 #footer .information-item p, #footer .information-item h4{
@@ -232,9 +229,29 @@ button {
     font-size: 14px;
     line-height: 40px;
 }
-
+#footer .information-item h4 {
+    color: #fff;
+}
 #footer .information-font {
     float: left;
     padding: 0 15px;
 }
-/* end begin footer */
+
+#footer .information-font-1 {
+    width: 21%;
+}
+
+#footer .information-font-2 {
+    width: 21%;
+}
+
+#footer .information-font-3 {
+    width: 21%;
+}
+
+#footer .information-font-4 {
+    width: 21%;
+}
+
+
+ /* end begin footer */
