--- a/font/style.css
+++ b/font/style.css
@@ -106,13 +106,28 @@ button {
 
 
 .icon {
-    padding: 40px 20px 10px 100px ;
+    margin-top: 40px;
+    margin-left: 40px;
 }
 
 
-.heart,.shop {
-    padding-right: 20px;
+.shop {
+    background-color: #fff;
+    border: 0;
+    padding: 0px 30px 15px 30px;
+    cursor: pointer;
+}
 
+.fa-shop {
+    height: 30px;
+    width: 30px;
+    align-items: center;
+    padding: 0;
+    opacity: 1;
+}
+
+.fa-shop:hover {
+    opacity: 0.5;
 }
 /* End container */
 
@@ -255,3 +270,109 @@ button {
 
 
  /* end begin footer */
+
+ /* begin modal */
+
+.modal  {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.3);
+    align-items: center;
+    /* thuộc tính nằm giữa chiều cao */
+    justify-content: center;
+    /* thuộc tính nằm giữa chiều ngàng */
+    /* điều kiện phải có thuộc tính display: flex */
+    display: none;
+
+}
+
+.modal-body-item {
+    display: flex;
+    width: 500px;
+    justify-content: space-between;
+}
+.font-price {
+    width: 200px;
+    margin-top: 25px;
+    font-size: 15px;
+}
+
+.item-img {
+    margin-left: 30px;
+    width: 120px;
+    height: 120px;
+}
+.modal-container {
+    background-color: #fff;
+    width: 600px;
+    min-height: 200px;
+    position: relative;
+    max-width: calc(100% -32px);
+}
+
+.modal-header {
+    background: #df9918;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    color: #000;
+}
+.fa-cart-shopping {
+    margin-right: 15px ;
+}
+
+.modal-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px;
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.modal-close:hover {
+    opacity: 1;
+}
+
+
+.modal-body {
+    padding: 16px;
+    border-bottom: 0.01px solid #949292;
+}
+
+.font-color {
+    color: #df9918;
+}
+
+.modal-item-giathanh {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 50px;
+}
+.item-pay,.item-pay-p {
+    width: 100%;
+    margin: 3px 0;
+    padding: 10px;
+}
+.item-pay {
+    background-color: #000 ;
+    color: #fff;
+}
+.item-pay-p {
+    margin-bottom: 0;
+}
+.item-pay:hover {
+    background-color: #dd3c3c ;
+    color: #ffffff;
+}
+
+.item-pay-p:hover {
+    background-color: #dd3c3c ;
+    color: #ffffff;
+}
+ /* end moda */
